# SudokuGame

./: README.md  pyproject.toml
sudokugame/: settings.py  sudoku.py
